<resources>
    <string name="app_name">Garment Charity</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_general_title">Delete Item</string>
    <string name="delete_dialog_general_msg">Are you sure you want to delete this item?</string>
    <string name="register_now_str">Don\'t have an account? Register Now</string>
    <string name="login_as_organization">Login as Organization</string>
    <string name="login_as_client">Login as Client</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="re_password">Re-Password</string>
    <string name="phone">Phone</string>
    <string name="approve_number">Approve Number</string>
    <string name="account_type">Account Type</string>
    <string name="client">Client</string>
    <string name="organization">Organization</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="password_not_match_error">Password and Re-Password do not match</string>
    <string name="address">Address</string>
    <string name="email_password_required">You must enter email and password</string>
    <string name="save">Save</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="delivery">Delivery</string>
    <string name="quantity">Quantity</string>
    <string name="notes">Notes</string>
    <string name="select_type">Select Type</string>
    <string name="emptychar"> </string>
    <string name="select_item">Select Item</string>
    <string name="show_requests">Show Requests</string>
    <string name="items">Items</string>
    <string name="categories">Categories</string>
    <string name="coverage_area">Coverage Area</string>
    <string name="select_regions">Select Regions</string>
    <string name="select">Select</string>
    <string name="add_category">Add Category</string>
    <string name="select_image">Select Image</string>
    <string name="category_name">Category Name</string>
    <string name="add_item">Add Item</string>
    <string name="select_category">Select Category</string>
    <string name="item_name">Item Name</string>
    <string name="size">Size</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="points">Points</string>
    <string name="add_new_request">Add New Request</string>
    <string name="select_region">Select Region</string>
    <string name="select_organization">Select Organization</string>
    <string name="available_date">Available Date</string>
    <string name="available_time">Available Time</string>
    <string name="send_request">Send Request</string>
    <string name="next">Next</string>
    <string name="request_details">Request Details</string>
    <string name="request_title">Request Title</string>
    <string name="your_requests">Your Requests</string>
    <string name="request_number">Request Number</string>
    <string name="client_name">Client Name</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="request_items">Request Items</string>
    <string name="confirm">Confirm</string>
    <string name="deliver">Deliver</string>
    <string name="request_status">Request Status</string>
</resources>