<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.authentication.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:layout_gravity="start"
                android:src="@drawable/ic_arrow_back"
                android:onClick="onBackClicked"
                app:tint="@color/colorPrimary" />

            <ImageView
                android:id="@+id/logo_layout"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="32dp"
                android:src="@drawable/main_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:text="@string/create_new_account"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/name"
                app:startIconDrawable="@drawable/icons8_organization_24"
                app:startIconTint="@color/colorPrimary"
                app:boxStrokeColor="@color/tritary_gray"
                app:hintTextColor="@color/tritary_gray">

                <EditText
                    android:id="@+id/organization_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="textPersonName"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/tritary_gray"
                app:hintTextColor="@color/tritary_gray"
                app:startIconDrawable="@drawable/icons8_mail_24"
                app:startIconTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="textEmailAddress"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:boxStrokeColor="@color/tritary_gray"
                app:hintTextColor="@color/tritary_gray"
                app:startIconDrawable="@drawable/password"
                app:startIconTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/re_password"
                app:boxStrokeColor="@color/tritary_gray"
                app:hintTextColor="@color/tritary_gray"
                app:startIconDrawable="@drawable/password"
                app:startIconTint="@color/colorPrimary">

                <EditText
                    android:id="@+id/confirm_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="textPassword"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/phone"
                app:startIconDrawable="@drawable/icons8_phone_24"
                app:startIconTint="@color/colorPrimary"
                app:boxStrokeColor="@color/tritary_gray"
                app:hintTextColor="@color/tritary_gray">

                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="phone"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/address"
                app:startIconDrawable="@drawable/icons8_address_24"
                app:startIconTint="@color/colorPrimary"
                app:boxStrokeColor="@color/tritary_gray"
                app:hintTextColor="@color/tritary_gray">

                <EditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center"
                    android:inputType="text"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:visibility="visible"
                android:gravity="center|start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_type"
                    android:textColor="@color/colorPrimary"/>

                <RadioGroup
                    android:id="@+id/account_type_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/client_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/client"/>

                    <RadioButton
                        android:id="@+id/vendor_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/organization"/>
                </RadioGroup>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:background="@drawable/cornered_accent_bg"
                    android:text="@string/create_new_account"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:onClick="onRegisterClicked"/>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/dark_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:onClick="onLoginClicked"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>