<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".presentation.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_centerline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/main_logo"
            app:layout_constraintBottom_toTopOf="@id/buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/login_as_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cornered_accent_bg"
                android:onClick="onLoginAsClientClicked"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/login_as_client"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:drawableTint="@color/white" />

            <Button
                android:id="@+id/login_as_vendor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/cornered_primary_bg"
                android:onClick="onLoginAsVendorClicked"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/login_as_organization"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:drawableTint="@color/white" />

            <Button
                android:id="@+id/register_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/cornered_stroke_primary_bg"
                android:onClick="onRegisterNowClicked"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/register_now_str"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                app:drawableTint="@color/colorPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>